# nft-staking-token2022

./: .gitignore  Anchor.toml  README.md  buffer-keypair.json  package.json  test-key-list.yaml
programs/nft-staking/: Cargo.toml
programs/nft-staking/src/: error.rs  lib.rs  state.rs  utils.rs
programs/nft-staking/src/instructions/: close_staking.rs  config_staking.rs  init_staking.rs  mod.rs  stake.rs  unstake.rs  withdraw_reward.rs
programs/nft-staking/src/utils/: reward_helper.rs
tests/: nft-staking.ts
tests/nft_group_member_init/: create-group.ts  create-member.ts  create-nft-collection.ts  index.ts  mint-nft.ts  reward-mint.ts  test-interface.ts  upload-helper.ts
